--- a/.env
+++ b/.env
@@ -21,9 +21,5 @@ APP_SECRET=dc68ad9be5afa45cac73d5e2d8941268
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="postgresql://<username>:<password>@<host>:<port>/<database_name>?serverVersion=<server_version>&charset=utf8"
 ###< doctrine/doctrine-bundle ###
