--- a/.env
+++ b/.env
@@ -21,5 +21,5 @@ APP_SECRET=dc68ad9be5afa45cac73d5e2d8941268
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-DATABASE_URL="postgresql://username:password@host:port/database_name?serverVersion=server_version&charset=utf8"
+DATABASE_URL="postgresql://username:password@127.0.0.1:5432/database_name?serverVersion=server_version&charset=utf8"
 ###< doctrine/doctrine-bundle ###
