--- a/.env.test
+++ b/.env.test
@@ -3,4 +3,4 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER='disabled'
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
-DATABASE_URL="postgresql://username:password@host:port/database_name?serverVersion=server_version&charset=utf8"
+DATABASE_URL="postgresql://username:password@127.0.0.1:5432/database_name?serverVersion=server_version&charset=utf8"
