Add name and description to composer.json file

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "heaven31415/my-cinema",
+    "description": "API for managing a cinema",
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "stable",
