--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,5 @@
 #file: noinspection SpellCheckingInspection
-name: Run all available tests
+name: Tests
 on: [ push, pull_request ]
 jobs:
     symfony:
