--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
     "symfony/browser-kit": "6.2.*",
     "symfony/css-selector": "6.2.*",
     "symfony/maker-bundle": "^1.48",
-    "symfony/phpunit-bridge": "^6.2"
+    "symfony/phpunit-bridge": "^6.2",
+    "zenstruck/foundry": "^1.33"
   },
   "config": {
     "allow-plugins": {
